--- a/templates/test_a6.html
+++ b/templates/test_a6.html
@@ -46,7 +46,7 @@
 						$.each(res, function(index, value){
 							if(value['name'] === 'not_full_input'){
 								$('#p-show').text(value['age'])
-								return 
+								return   // compared to continue 
 								}else if(value['name'] == 'name_repeat'){
 									$('#p-show').empty()
 									return
